tools/tests/errors/surf_cont_10.ki
# Bytes element below the 0..255 range (negative)
discard Bytes([1, -1, 3])
